--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=truongvd
-DB_PASSWORD=
+DB_USERNAME=root
+DB_PASSWORD=truongvd@130194
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
