--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=truongvd@130194
+DB_DATABASE=truongvd
+DB_USERNAME=truongvd
+DB_PASSWORD=Truong@1
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
