commit layout student

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,7 +4,7 @@
     </IfModule>
 
     RewriteEngine On
-    RewriteBase /var/www/laravel/
+    RewriteBase /var/www/laravel/public
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
