--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,10 +4,8 @@
     </IfModule>
 
     RewriteEngine On
-    RewriteBase /var/www/laravel/public
-    # Handle Authorization Header
-    RewriteCond %{HTTP:Authorization} .
-    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    RewriteCond %{REQUEST_URI} !^public
+    RewriteRule ^(.*)$ public/$1 [L]
 
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
