--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,7 +4,7 @@
     </IfModule>
 
     RewriteEngine On
-    RewriteBase /laravel/public
+    RewriteBase /
    # change above to your site i.e.,  RewriteBase /whatever/public/
 
     # Redirect Trailing Slashes...
