--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,15 +1,15 @@
-Options -MultiViews
-RewriteEngine On
+<IfModule mod_rewrite.c>
+<IfModule mod_negotiation.c>
+    Options -MultiViews
+</IfModule>
 
-# Redirect Trailing Slashes If Not A Folder...
-RewriteCond %{REQUEST_FILENAME} !-d
+RewriteEngine On
+RewriteBase /
+
+# Redirect Trailing Slashes...
 RewriteRule ^(.*)/$ /$1 [L,R=301]
 
 # Handle Front Controller...
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.php [L]
-
-# Handle Authorization Header
-RewriteCond %{HTTP:Authorization} .
-RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
